--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"main": "index.js",
 	"scripts": {
 		"script": "node src/app.js",
-		"dev": "env-cmd -f ./config/dev.env nodemon src/app.js"
+		"dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
 	},
 	"keywords": [],
 	"author": "",
